Run the testsuite with -vanilla to protect from local pollution.
This change just makes the testsuite run in a -vanilla SXEmacs instance
to keep local settings and packages out of the equation.

	* tests/Makefile.am (tests_environment): Use -vanilla.
	(check-formats, check-map, check-skiplists, check-%): Ditto.

Signed-off-by: Steve Youngs <steve@sxemacs.org>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -84,7 +84,7 @@ SXEDMP = $(SXEMACS).dmp
 testdir = $(srcdir)
 testautomdir = $(testdir)/automated
 tests_environment = $(BATCHENV) \
-	$(SXEMACS) -batch -l ${testautomdir}/test-harness.el \
+	$(SXEMACS) -batch -vanilla -l ${testautomdir}/test-harness.el \
 		-f batch-test-emacs $(testautomdir)
 
 ## Use our former check target
@@ -92,19 +92,19 @@ check-am: $(SXEMACS) $(SXEDMP)
 	$(tests_environment)
 
 check-formats: $(SXEMACS) $(SXEDMP)
-	$(BATCHENV) $(SXEMACS) -l ${testautomdir}/test-harness.el \
+	$(BATCHENV) $(SXEMACS) -vanilla -l ${testautomdir}/test-harness.el \
 	-f batch-test-emacs $(testautomdir)/format-tests.el
 
 check-map: $(SXEMACS) $(SXEDMP)
-	$(BATCHENV) $(SXEMACS) -l ${testautomdir}/test-harness.el \
+	$(BATCHENV) $(SXEMACS) -vanilla -l ${testautomdir}/test-harness.el \
 	-f batch-test-emacs $(testautomdir)/map-tests.el
 
 check-skiplists: $(SXEMACS) $(SXEDMP)
-	$(BATCHENV) $(SXEMACS) -l ${testautomdir}/test-harness.el \
+	$(BATCHENV) $(SXEMACS) -vanilla -l ${testautomdir}/test-harness.el \
 	-f batch-test-emacs $(testautomdir)/skiplist-tests.el
 
 check-%: $(SXEMACS) $(SXEDMP)
-	$(BATCHENV) $(SXEMACS) -l ${testautomdir}/test-harness.el \
+	$(BATCHENV) $(SXEMACS) -vanilla -l ${testautomdir}/test-harness.el \
 	-f batch-test-emacs $(testautomdir)/$*-tests.el
 
 
