Make info be generated in buildidr
	* info/Makefile.am (builddir, srcdir, SUBDIRS): Add settings to
	generate info in buildir and reset SUBDIRS in order not to
	recurse.

--- a/info/Makefile.am
+++ b/info/Makefile.am
@@ -25,6 +25,11 @@
 LANG=C
 LC_ALL=C
 
+builddir = @builddir@
+srcdir = @srcdir@
+
+SUBDIRS=
+
 info_TEXINFOS =
 info_TEXINFOS += cl.texi
 info_TEXINFOS += custom.texi
