Revert "Remove duplicate subdirs"
This reverts commit 9cdb268091bd33e600448864eda49c3c8b365699.

--- a/Makefile.am
+++ b/Makefile.am
@@ -55,7 +55,7 @@ sxe_subdirs += lib-src
 if DESCEND_MODULES
 sxe_subdirs += modules
 endif
-sxe_subdirs += src lisp info etc tests
+sxe_subdirs += src lisp src lisp info etc tests
 
 SUBDIRS =
 SUBDIRS += $(sxe_subdirs)
