Provide helper defines
	* configure.ac: Make sure to define SED and ECHO as some system
	autoconf macros use them without defining them (tsk tsk
	libtool...)

Signed-off-by: Nelson Ferreira <nelson.ferreira@ieee.org>

--- a/configure.ac
+++ b/configure.ac
@@ -770,6 +770,10 @@ ulimit -c 0
 ## initialise our nestable msg funs
 SXE_INIT_MSG_LEVEL
 
+AC_PROG_SED
+
+ECHO=echo
+
 dnl Small snippet to make echo -n work on solaris
 ECHO_N= ECHO_C=
 case `echo -n x` in
