Add builtin tty support option
	* configure.ac: Add disabled by default --with-builtin-tty as last
	resort to get a workable build with no other libraries.  A
	workable terminal spec will be needed at runtime.

Signed-off-by: Nelson Ferreira <nelson.ferreira@ieee.org>

--- a/configure.ac
+++ b/configure.ac
@@ -575,6 +575,13 @@ OG_ARG_WITH([termcap],
 		[Use the termcap library for tty support.]),
 	[auto], [Autodetect])
 
+OG_ARG_WITH([builtin-tty],
+	AS_HELP_STRING([--with-builtin-tty],
+		[Use builtin termcap like code. LEGACY CODE. Please consider
+		installing ncurses. Requires /etc/termcap or TERMCAP
+	        environment variable to work.]),
+	[no], [No])
+
 
 OG_ARG_WITH([gpm],
 	AS_HELP_STRING([--with-gpm],
