Improve the configure summary output.
	* m4/sxe-summary.m4 (SXE_SUMMARY): Add short caveat about package
	paths may be different at runtime.

	* configure.ac: Set $with_package_path to something closer to the
	truth.

Signed-off-by: Steve Youngs <steve@sxemacs.org>

--- a/configure.ac
+++ b/configure.ac
@@ -3919,10 +3919,10 @@ fi
 
 if test -z "$with_package_path" && test -n "$with_package_prefix" ; then
   if test "$with_mule" = "yes" ; then
-    with_package_path="~/.sxemacs/site-packages:~/.sxemacs/sxemacs-packages:~/.sxemacs/xemacs-packages:~/.sxemacs/mule-packages"
+    with_package_path="~/.local/share/sxemacs/site-packages:~/.local/share/sxemacs/sxemacs-packages:~/.local/share/sxemacs/xemacs-packages:~/.local/share/sxemacs/mule-packages"
     with_package_path="${with_package_path}:${with_package_prefix}/site-packages:${with_package_prefix}/sxemacs-packages:${with_package_prefix}/xemacs-packages:${with_package_prefix}/mule-packages"
   else
-    with_package_path="~/.sxemacs/site-packages:~/.sxemacs/sxemacs-packages:~/.sxemacs/xemacs-packages"
+    with_package_path="~/.local/share/sxemacs/site-packages:~/.local/share/sxemacs/sxemacs-packages:~/.local/share/sxemacs/xemacs-packages"
     with_package_path="${with_package_path}:${with_package_prefix}/site-packages:${with_package_prefix}/sxemacs-packages:${with_package_prefix}/xemacs-packages"
   fi
 fi
