Display a better version of the truth in the configure summary.
	* configure.ac: Set $with_module_path to something closer to the
	truth.

Signed-off-by: Steve Youngs <steve@sxemacs.org>

--- a/configure.ac
+++ b/configure.ac
@@ -3899,7 +3899,7 @@ done
 AC_SUBST(INFOPATH)
 
 if test -z "$with_module_path"; then
-    with_module_path="~/.sxemacs/${configuration}/modules:${libdir}/${PROGNAME}/${configuration}/site-modules:${libdir}/${instvardir}/${configuration}/modules"
+    with_module_path="~/.config/sxemacs/${configuration}/modules:${libdir}/${PROGNAME}/${configuration}/site-modules:${libdir}/${instvardir}/${configuration}/modules"
 fi
 
 AC_SUBST(module_path,$with_module_path)
