--- a/configure.ac
+++ b/configure.ac
@@ -9,7 +9,7 @@ dnl Autoconf startup.
 dnl -------------------------------------------------------------------------
 
 AC_PREREQ([2.62])
-AC_INIT([SXEmacs], [SXEM4CS_VERSION], [http://issues.sxemacs.org/])
+AC_INIT([SXEmacs], [SXEM4CS_VERSION], [https://issues.sxemacs.org/])
 AC_CONFIG_HEADER([src/config.h])
 AC_CONFIG_SRCDIR([src/lisp.h])
 AC_CONFIG_AUX_DIR([.])
